--- a/KafkaProducer/pom.xml
+++ b/KafkaProducer/pom.xml
@@ -1,5 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <repositories>
+    <repository>
+      <id>cloudera</id>
+      <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+    </repository>
+  </repositories>
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.Kafka.producer</groupId>
@@ -35,6 +41,24 @@
     <artifactId>avro</artifactId>
     <version>1.8.2</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/org.apache.avro/avro-ipc -->
+<dependency>
+    <groupId>org.apache.avro</groupId>
+    <artifactId>avro-ipc</artifactId>
+    <version>1.8.2-cdh6.2.1</version>
+    <scope>provided</scope>
+</dependency>
+
+
+<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql -->
+<dependency>
+    <groupId>org.apache.spark</groupId>
+    <artifactId>spark-sql_2.11</artifactId>
+    <version>2.4.0-cdh6.1.0</version>
+</dependency>
+
+
 
     
   </dependencies>
